--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,15 @@
-table {
-
+body{
+    padding: 20%;
+    padding-top: 10%;
 }
 td {
-    width:50px;
-    height:50px;
+    width:80px;
+    height:80px;
+    border: 1px solid black
+}
+td:hover {
+    background-color: lightgray;
+}
+div {
     text-align: center;
 }
