--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,19 @@
 body{
-    padding: 20%;
-    padding-top: 10%;
+    padding:5%
+
 }
 td {
     width:80px;
     height:80px;
-    border: 1px solid black
+    border: 1px solid black;
+    cursor: pointer;
 }
 td:hover {
     background-color: lightgray;
 }
 div {
-    text-align: center;
+
+}
+button{
+
 }
